# Genetic-car

./: .gitignore  BestCar  CMakeLists.txt  Makefile  README.md  config  sample_path  temp1
resources/: Alpha  Beta  Path2.txt  Path3.txt  Path4.txt  path1  path5.txt  sample_path
src/: Car.cpp  Car.h  Config.cpp  Config.h  CubicCurve.cpp  CubicCurve.h  Eye.cpp  Eye.h  Helper.h  NeuralNetwork.cpp  NeuralNetwork.h  Path.cpp  Path.h  Ray.cpp  Ray.h  Spline.cpp  Spline.h  lin_al.h  main.cpp
